turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: type mismatch;
 found   : Double
 required: Int
for ( k <- 0 to c-1) {
                 ^